--- a/app/src/main/res/layout/element_root_folder_recycler.xml
+++ b/app/src/main/res/layout/element_root_folder_recycler.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:textColor="@color/settings_text"
         app:layout_constraintEnd_toStartOf="@+id/rootFolderElementRemoveButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,6 +24,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
+        android:textColor="@color/settings_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/rootFolderElementRemoveButton"
         app:layout_constraintStart_toStartOf="parent"
