--- a/app/src/main/res/layout/element_gallery_recycler_folder.xml
+++ b/app/src/main/res/layout/element_gallery_recycler_folder.xml
@@ -11,6 +11,8 @@
         android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
+        android:tint="@color/theme_primary_mid"
+        android:tintMode="multiply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
