--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/theme_primary_content</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/theme_primary_dark</item>
         <!-- Customize your theme here. -->
         <item name="actionBarTheme">@style/RegularActionBar</item>
         <item name="android:itemTextAppearance">@style/ActionBarMenuItem</item>
