--- a/app/src/main/res/layout/element_gallery_recycler_image.xml
+++ b/app/src/main/res/layout/element_gallery_recycler_image.xml
@@ -18,6 +18,17 @@
         app:srcCompat="@drawable/placeholder_image" />
 
     <ImageView
+        android:id="@+id/galleryImageMovieBorder"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:alpha="0.5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icon_movie" />
+
+    <ImageView
         android:id="@+id/galleryImageFade"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -25,8 +36,10 @@
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/gallery_image_fade" />
 
     <TextView
