--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -5,8 +5,8 @@
     android:id="@+id/mainRootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/content_background"
-    tools:context=".views.MainActivity" >
+    android:background="@color/icon_background"
+    tools:context=".views.StartMainActivity">
 
     <ImageView
         android:id="@+id/imageView"
