--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="theme_primary_content">#FFFFFF</color>
     <color name="theme_primary_content_dark">#000000</color>
 
+    <color name="icon_background">#FF5FD3BC</color>
+
     <color name="content_background">#444444</color>
     <color name="gallery_element_text">#FFFFFF</color>
     <color name="settings_text">#FFFFFF</color>
