--- a/app/src/main/res/layout/activity_gallery_navigation.xml
+++ b/app/src/main/res/layout/activity_gallery_navigation.xml
@@ -23,6 +23,11 @@
         android:id="@+id/navigationFileRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:fadeScrollbars="true"
+        android:scrollbarSize="8dp"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbarThumbVertical="@drawable/scrollbar_thumb_navigation_vertical"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
